# sel4commonroot-demo

./: CMakeLists.txt  README.md  easy-settings.cmake  master.xml  settings.cmake
